# phytreon

./: CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
benchmark/: benchmark.py  benchmark_report.md
docs/: api.md  index.md
docs/tutorials/: annotate.md  build_tree.md  comparative.md  expression_similarity.md  lineage_tracing.md  tanglegram.md  tree_styles.md
examples/: demo.py  lineage_demo.py  ml_demo.py  mutation_lineage_demo.py  pipeline_demo.py  showcase_circular.py  tanglegram_demo.py  tracks_demo.py  tree_of_life_demo.py  tree_styles_demo.py
examples/data/: SOURCES.md  big16S.fasta  big16S_aligned.fasta  big16S_metadata.csv  fetch_large_16S.py  fetch_lineage_data.py  fetch_mutation_data.py  lineage_reference_tree.nwk  mutation_genotypes.csv
phytreon/: __init__.py  datasets.py  scene.py  treeops.py
phytreon/comparative/: __init__.py  ace.py  stochastic_mapping.py
phytreon/core/: __init__.py  io.py  nexus.py  tree.py
phytreon/infer/: __init__.py  _search.py  aa_models.py  align.py  bootstrap.py  distance.py  expression.py  lineage.py  matrix.py  ml.py  ml_native.py  parsimony.py  pipeline.py  trim.py
phytreon/layout/: __init__.py  base.py  circular.py  rectangular.py  unrooted.py
phytreon/plot/: __init__.py  backends.py  densi.py  elements.py  figure.py  palettes.py  tangle.py
tests/: test_expression.py  test_lineage.py  test_nexus.py  test_pipeline.py  test_protein_ml.py  test_smoke.py  test_tangle.py  test_treeplots.py
validation/: validate.py  validation_report.md
